client/client.styl
@import url("https://fonts.googleapis.com/css?family=Fugaz+One")
header.ui.fixed.top.menu, footer.ui.bottom.fixed
  background-color #f3f3f3
header .logo img.ui.image
  -webkit-filter: drop-shadow(1px 1px 1px #222);
  filter: drop-shadow(1px 1px 1px #222);
header .logo i.icons
  margin 10px 20px

.bg-img
  overflow hidden
.bg-img h3
  opacity 0
.bg-img:after
  content ' '
  display block
  position fixed
  left 0
  top 0
  width 100%
  height 100%
  opacity 0.7
  z-index -1
  background-image url("/lodyas.png")
  background-repeat repeat
  background-position 50% 0
  -ms-background-size: cover;
  -o-background-size: cover;
  -moz-background-size: cover;
  -webkit-background-size: cover;
  background-size: cover;

#page-wrapper
  padding 60px 15px 100px

footer.ui.bottom.fixed
  padding 0.2em
  .right.aligned.column span
    display inline-block
    margin 1em 0.6em 1em 0

.ui.accordion .title, .ui.accordion .accordion .title
  cursor initial

#key-display .title .ui.basic.label
  padding 0em 0.4em
#key-display .title .ui.button i.icon
  margin 0 0.15em 0 -0.15em

.ui.top.attached.segment
  background-color #f3f3f3
.log:not(:first-child)
  margin-top 1em

@media screen and (max-width: 420px)
  span.user-name
    display none!important
@media screen and (min-width: 768px)
  padding 40px 0px 60px 0px
#settingsSaved
  display none

#settings>.header
  height 64px

.change-text
  margin-left 10px

